@@ -62,6 +62,7 @@ Data Changes:
 - Rigger 5.0 attribute increase drone mods now properly consume slot points based on the increase instead of on the total rating. The first level of an attribute increase (the first three for armor) are not also properly free.
 - Weapons that come with Trigger Removal as default no longer get an extra +1 Accuracy compared to their printed statblocks.
 - In Priority-based creation, Apprentices now get the same skill group extras that Aspected Magicians get, though they cannot choose the Enchanting skill group because those skills are forbidden for Apprentices. Fixes #4313.
+- Rigger 5.0 Standard and Heavy vehicle mounts can now equip sniper rifles that have sporting rifle ranges. Fixes #4289.
 
 Changed/New Strings:
 - MessageTitle_AutosaveFound
